[package]
name = "lin-kernighan"
version = "0.1.0"
edition = "2018"

[dependencies]
tsplib = { git = "https://github.com/caiopsouza/tsplib" }
rayon = "1.5.0"

[profile.dev]
lto = true
codegen-units = 1
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "linker"
harness = false